--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,6 +1,11 @@
 .container {
-  margin-left: auto;
+  /* margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 15px; */
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+  padding-bottom: 24px;
 }
